# card-generation-service

./: .gitignore  Dockerfile  Makefile  README.md  Untitled.ipynb  chroma_import_script.py  config.py  dependencies.py  docker-compose.yml  main.py  mongo-init.js  pyproject.toml  util.py
.github/workflows/: build.yml  test.yml
adapters/: ChromaConnection.py  DBConnection.py  DBInterface.py  DBOperations.py  DeckServiceAPI.py  PDFStorage.py  SciPDFToMD.py  TaskQueue.py  VectorStore.py  __init__.py  migration_script.py
adapters/database_models/: BaseMongoModel.py  Content.py  ModelConfig.py  Note.py  PDF.py  PyObjectID.py  User.py  WebContent.py
adapters/http_models/: Content.py  HttpModels.py  Note.py  PDF.py  SearchResults.py  WebContent.py
adapters/repository/: BaseRepository.py  ConfigRepository.py  ContentRepository.py  NoteRepository.py  UserRepository.py  __init__.py
adapters/vector_store/: ChromaConnection.py  VectorStore.py
api/: __init__.py  routes.py
api/endpoints/: content.py  notes.py  pdf.py  search.py  web_content.py
database/: __init__.py  connection.py  db.py  db_interface.py  operations.py
lib/: TextSplitter.py
lib/GPT/: CardGeneration.py  GPTInterface.py  QuestionAnswerGPT.py  SingleFlashcardGenerator.py  Summarizer.py  __init__.py
lib/content/: Content.py  ContentExtractor.py  __init__.py  util.py
lib/util/: error.py
models/: HttpModels.py  ModelConfig.py  MongoModel.py  Note.py  PDF.py  PyObjectID.py  SearchResults.py  User.py  WebContent.py
repository/: BaseRepository.py  DBConnection.py  NoteRepository.py  __init__.py
routes/: notes.py  pdf.py  search.py  web_content.py
tests/: test_notes.py
tests/routes/: test_notes.py  test_web_content.py
tests/text/: test_card_source_generator.py  test_single_flashcard_generator.py
text/: CardSourceGenerator.py  GPTInterface.py  SciPDFToMD.py  SingleFlashcardGenerator.py  Summarizer.py  VectorStore.py  chroma_client.py  extract_info.py  html_extraction.py
text/GPT/: CardGeneration.py  GPTInterface.py  QuestionAnswerGPT.py  SingleFlashcardGenerator.py  Summarizer.py  __init__.py
text/content/: Content.py  ContentExtractor.py  util.py
text_processing/: extract_info.py  post_processing.py  pre_processing.py
usecases/: CreateContentUsecase.py  __init__.py
util/: error.py  scraper.py
