[tool.poetry]
name = "card-generation-service"
version = "0.1.0"
description = ""
authors = ["Moritz Eich <hey@moritz.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.95.0"
openai = "0.27.0"
python-dotenv = "^0.19.2"
slowapi = "^0.1.5"
motor = "^2.5.1"
requests = "^2.27.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
beautifulsoup4 = "^4.11.2"
readability-lxml = "^0.8.1"

[tool.poetry.dev-dependencies]
pip = "^22.0.4"
black = "^22.1.0"
mypy = "^0.950"
types-requests = "^2.27.25"
pytest = "^7.1.2"
mongo-types = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
